--- a/coming-soon.html
+++ b/coming-soon.html
@@ -30,8 +30,8 @@
       }
 
       .logo {
-        width: 350px;
-        margin-bottom: 60px;
+        /* width: 350px; */
+        /* margin-bottom: 60px; */
       }
 
       .heading {
@@ -181,7 +181,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="./img/logo.png" alt="Blue Passion" class="logo" />
+      <img src="./img/logo-2.png" alt="Blue Passion" class="logo" />
       <div class="loading">
         <span class="dot"></span>
         <span class="dot"></span>
