--- a/index.html
+++ b/index.html
@@ -20,30 +20,12 @@
       </div>
       <h1 class="cs-heading">Coming Soon</h1>
 
-      <!-- Countdown -->
-      <div id="countdown-timer" class="text-white">
-        <strong id="days" class="bold-number"> </strong>
-        <span class="slim-countdown-text"
-          >D<span class="hide-words">ays</span><span class="timer"></span
-        ></span>
-
-        <strong id="hours" class="bold-number"> </strong>
-        <span class="slim-countdown-text"
-          >H<span class="hide-words">ours</span><span class="timer"></span
-        ></span>
-
-        <strong id="mins" class="bold-number"> </strong>
-        <span class="slim-countdown-text"
-          >M<span class="hide-words">inutes</span><span class="timer"></span
-        ></span>
-      </div>
-
       <!-- Info Text -->
       <p class="cs-text">
-        Creativity, Sustainability, Efficiency. Briefly all the high standarts requested on
-        developing and producing a denim product is the genetic of BluePassion. With over decade
-        experience It'll be at service in denim market in Cambodia to bring in different
-        perspective.
+        Creativity, sustainability, efficiency and quality. Producing and developing high quality
+        denim products is part of the genetics of BluePassion. Based in Phnom Penh, Cambodia, with
+        over decade experience and industry expertise, BluePassion brings new perspective to the
+        denim textile market.
       </p>
 
       <!-- Social Icons -->
